src/test/PackageImportConflictFailing/PackageImportConflictFailing.expected
error: PackageImportConflictFailing.panda:16:13: class 'String' is ambiguously referenced, both panda.core.String and example.String match
1 error
